be able to attach debugger to the arquillian-launched AS container. you do this by passing in -Ditest.debug on the mvn cmd line this also adds an eclipse launcher to connect to it on the proper port