@@ -25,6 +25,8 @@
   <properties>
     <jboss.zip>${settings.localRepository}/org/jboss/as/jboss-as-dist/${jboss.version}/jboss-as-dist-${jboss.version}.zip</jboss.zip>
     <jboss.unzip.location>${basedir}/target/jboss-as-${jboss.version}</jboss.unzip.location>
+    <jboss.vm.args>-Xmx700m -XX:MaxPermSize=200m</jboss.vm.args>
+    <jboss.vm.args.debug></jboss.vm.args.debug> <!-- -Ditest.debug can override this, see below -->
   </properties>
 
   <dependencies>
@@ -704,6 +706,18 @@
         <skip.postgres>true</skip.postgres>
         <skip.oracle>false</skip.oracle>
       </properties>
+    </profile>
+
+    <profile>
+        <id>itest.debug</id>
+        <activation>
+            <property>
+                <name>itest.debug</name>
+            </property>
+        </activation>
+        <properties>
+            <jboss.vm.args.debug>-Xrunjdwp:transport=dt_socket,address=8798,server=y,suspend=y</jboss.vm.args.debug>
+        </properties>
     </profile>
   </profiles>
 </project>
